# static-analyzer-for-analysis-of-design-pattern

./: README.md  client.py  factory_detector.py  main.py  notify_cfg  observer_detector.py  singleton.py  singleton_cfg_tester.py  strategy_detector.py  template_detector.py  test_cfg.py  test_observer.py  test_observer1.py  test_singleton.py  test_singleton2.py  test_singleton4.py  test_singleton7.py  test_strategy.py
architecture-tutor-project/: pyproject.toml
architecture-tutor-project/src/architecture_tutor/: __init__.py  factory_detector.py  observer_detector.py  singleton_detector.py  strategy_detector.py  template_detector.py  tutor_module.py
architecture-tutor-project/src/architecture_tutor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mixed_testcases/: test1.py  test2.py  test3.py
test-cases/test_cases-factory/: test_factory1.py  test_factory2.py  test_factory3.py
test-cases/test_cases-observer/: test4.py  test5.py  test6.py
test-cases/test_cases-singleton/: test_singleton1.py  test_singleton2.py  test_singleton8.py
test-cases/test_cases-strategy/: test1.py  test3.py  test4.py  test5.py  test7.py
test-cases/test_cases-template/: test3.py  test4.py
test_cases-factory/: test_factory1.py  test_factory4.py  test_factory5.py  test_factory6.py  test_factory7.py
test_cases-observer/: test1.py  test2.py  test3.py  test7.py
test_cases-singleton/: test_singleton1.py  test_singleton5.py  test_singleton6.py
test_cases-strategy/: test2.py  test6.py
test_cases-template/: test1.py  test2.py
